--- a/provision/etc/kubernetes/config
+++ b/provision/etc/kubernetes/config
@@ -19,4 +19,4 @@ KUBE_LOG_LEVEL="--v=0"
 KUBE_ALLOW_PRIV="--allow-privileged=false"
 
 # How the controller-manager, scheduler, and proxy find the apiserver
-KUBE_MASTER="--master=http://172.17.0.100:8080"
+KUBE_MASTER="--master=https://172.17.0.100:6443"
