--- a/kubernetes-dashboard.yaml
+++ b/kubernetes-dashboard.yaml
@@ -160,8 +160,11 @@ metadata:
   name: kubernetes-dashboard
   namespace: kube-system
 spec:
+  type:
+    NodePort
   ports:
     - port: 443
       targetPort: 8443
+      nodePort: 30443
   selector:
     k8s-app: kubernetes-dashboard
