--- a/addons/dashboard/kubernetes-dashboard.yaml
+++ b/addons/dashboard/kubernetes-dashboard.yaml
@@ -116,7 +116,8 @@ spec:
       - name: kubernetes-dashboard
         image: k8s.gcr.io/kubernetes-dashboard-amd64:v1.8.3
         ports:
-        - containerPort: 8443
+        - name: https
+          containerPort: 8443
           protocol: TCP
         args:
           - --auto-generate-certificates
@@ -157,6 +158,8 @@ apiVersion: v1
 metadata:
   labels:
     k8s-app: kubernetes-dashboard
+  annotations:
+    prometheus.io/scheme: "https"
   name: kubernetes-dashboard
   namespace: kube-system
 spec:
