--- a/addons/prometheus/node-exporter/node-exporter-service.yaml
+++ b/addons/prometheus/node-exporter/node-exporter-service.yaml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   labels:
     app: node-exporter
+  annotations:
+    prometheus.io/scheme: "https"
   name: node-exporter
   namespace: monitoring
 spec:
