调整 Kubernetes 资源定义，以适应 Prometheus 通过 blackbox-exporter 探测服务

--- a/addons/dashboard/kubernetes-dashboard.yaml
+++ b/addons/dashboard/kubernetes-dashboard.yaml
@@ -160,6 +160,8 @@ metadata:
     k8s-app: kubernetes-dashboard
   annotations:
     prometheus.io/scheme: "https"
+    prometheus.io/probe: "true"
+    prometheus.io/module: "http_2xx"
   name: kubernetes-dashboard
   namespace: kube-system
 spec:
